# tremor_feedback_jw

./: .gitignore  230223_manuscript_jw.docx  README.md  ana00_qualitycheck.py  environment.yml  pyproject.toml  requirements.txt  setup.py
00_general_info/: second_data_aqu_01082021.pptx  third_results_240921.pptx
03_experiment/: run_archer_copy.py  run_fly_pas.py  run_loud_pas.py
05_scripts/: ana00_qualitycheck.py  ana00_sanitycheck.ipynb  ana00_startup.m  ana01_prep.m  ana01_prep_archer_rep.asv  ana01_prep_archer_rep.m  ana01_prep_force.ipynb  ana01_prep_force.py  ana01_prep_pupil.ipynb  ana01_prep_ss_data.m  ana02_corr_pup_gss.ipynb  ana02_grp_stats.m  ana03_chg_trmr_ppl.ipynb  ana03_freq_bnds_trmr.m  ana03_grp_lvl_stats.m  ana03_kalman_estimates.m  ana04_behav.ipynb  ana04_estimate_cc_kalman_filters.ipynb  eval01_emgVSfsr.m
07_paper/: 171122_manuscript_jw.docx  171122_manuscript_jw_2.docx  221222_manuscript_JB.docx  300922_manuscript_jw.docx  README.md  biorxiv-template.docx  figs_all.pptx
101_software/: GMD.m  README.md  SingleSubjectDataArcherRep.m  SurfArea.m  TFana.m  cont_area.m  emg_trmr_frq.m  fit_EMG.m  inter_area.m  normalise.m  renameEvents_table.m  sfft.m  ttest2_param.m
data/: 01_prepall_trials.mat  README.md
experiment/: run_aud_con.py
paper/: 160523_manuscript_jw_jb.docx  230623_manuscript_sensory_feedback.docx  260123_manuscript_code.docx  figs_all.pptx  ~$0423_manuscript_jw.docx  ~$1122_manuscript_jw.docx
scripts/: README.md  ana01_prep_force.py  ana01_prep_pupil.py  ana02_corr_fsr_pup.ipynb  ana03_chg_trmr_ppl.ipynb  ana04_behav.ipynb  (+7 more)
(+109 files in other folders)
