[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "OSF"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy (>=7.0.1,<8.0.0)",
    "mne (>=1.9.0,<2.0.0)",
    "pylsl (>=1.17.6,<2.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pyxdf (>=1.17.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statannot (>=0.2.3,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]
packages = [{include = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
